# Wukong2024

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_windows.json
CMake/: FindCppAD.cmake  FindGmsh.cmake  FindIPOPT.cmake  FindKNITRO.cmake  FindNLOPT.cmake  libigl.cmake
Projects/: CMakeLists.txt  create_new_project.py
Projects/Autodiff/: CMakeLists.txt
Projects/Autodiff/autodiff/: CST3DShell.cpp
Projects/Autodiff/include/: App.h  Autodiff.h
Projects/Autodiff/src/: Autodiff.cpp  main.cpp
Projects/DiscreteShell/: CMakeLists.txt
Projects/DiscreteShell/autodiff/: CST3DShell.h
Projects/DiscreteShell/data/: periodic_rods.txt
Projects/DiscreteShell/include/: App.h  DiscreteShell.h  Util.h
Projects/DiscreteShell/src/: DiscreteShell.cpp  main.cpp
Projects/EoLRods/: CMakeLists.txt
Projects/EoLRods/autodiff/: EoLRodBendingAndTwistingPBC.h  EoLRodEulerAngleBendingAndTwisting.h  EoLRodQuaternionBendingAndTwisting.h  EoLRodStretchingEnergy.h  JointBendingAndTwisting.h  RotationPenalty.h
Projects/EoLRods/include/: App.h  EoLRodSim.h  HybridC2Curve.h  RestState.h  Rod.h  Scene.h  Util.h
Projects/EoLRods/src/: App.cpp  BendingAndTwisting.cpp  EoLRodSim.cpp  HybridC2Curve.cpp  Joint.cpp  PBCBendingAndTwisting.cpp  ParallelContact.cpp  PeriodicBC.cpp  Regularizer.cpp  RestState.cpp  Rod.cpp  Scene.cpp  Stretching.cpp  Util.cpp  main.cpp
Projects/FEM3D/: CMakeLists.txt
Projects/FEM3D/autodiff/: FEMEnergy.cpp  FEMEnergy.h
Projects/FEM3D/data/: torus.msh
Projects/FEM3D/include/: App.h  FEM3D.h  Util.h
Projects/FEM3D/src/: DerivativeTest.cpp  FEM3D.cpp  IPC.cpp  Penalty.cpp  main.cpp
Projects/FEMQuadTet/: CMakeLists.txt
Projects/FEMQuadTet/autodiff/: QuadraticTetEnergy.cpp  QuadraticTetEnergy.h
Projects/FEMQuadTet/include/: App.h  FEMQuadTet.h  Util.h
Projects/FEMQuadTet/src/: FEMQuadTet.cpp  main.cpp
Projects/Homogenization/: CMakeLists.txt
Projects/Homogenization/include/: App.h  CurvilinearShell.h  DiscreteShellHomogenization.h  Homogenization.h  Util.h
Projects/Homogenization/src/: App.cpp  DiscreteShellHomogenization.cpp  Homogenization.cpp  main.cpp
Projects/IMLSContact/: CMakeLists.txt
Projects/IMLSContact/autodiff/: FEMEnergy.h
Projects/IMLSContact/data/: beam.msh
Projects/IMLSContact/include/: App.h  IMLSContact.h  Util.h
Projects/IMLSContact/src/: DerivativeTest.cpp  IMLSContact.cpp  IPC.cpp  Penalty.cpp  main.cpp
Projects/IsohedralTiling/: CMakeLists.txt
Projects/IsohedralTiling/include/: App.h  IsohedralTiling.h  Util.h
Projects/IsohedralTiling/src/: IsohedralTiling.cpp  Util.cpp  main.cpp
Projects/MMCCells/: CMakeLists.txt
Projects/MMCCells/include/: App.h  MMC2D.h  MMC3D.h  VecMatDef.h
Projects/MMCCells/src/: main.cpp
Projects/NeuralMaterialModel/: CMakeLists.txt
Projects/NeuralMaterialModel/include/: App.h  DiscreteShellMacro.h  NeuralMaterialModel.h
Projects/NeuralMaterialModel/python/: model.py  neohookean_overfitting.py
Projects/NeuralMaterialModel/python/Models/10/: checkpoint  homo_NH.tf.data-00000-of-00002  homo_NH.tf.data-00001-of-00002  homo_NH.tf.index
Projects/NeuralMaterialModel/python/Models/10/variables/: variables.data-00000-of-00002  variables.index
Projects/NeuralMaterialModel/python/Models/9/: homo_NH.tf.data-00001-of-00002  homo_NH.tf.index
Projects/NeuralMaterialModel/python/Models/9/variables/: variables.data-00000-of-00002  variables.index
Projects/NeuralMaterialModel/src/: DiscreteShellMacro.cpp  NeuralMaterialModel.cpp  main.cpp
Projects/ParametericYarn/: CMakeLists.txt
Projects/ParametericYarn/include/: App.h  ParametericYarn.h
Projects/ParametericYarn/src/: ParametericYarn.cpp  main.cpp  plain-knit.cpp
Projects/Rod2D/: CMakeLists.txt
Projects/Rod2D/autodiff/: RodEnergy.cpp  RodEnergy.h
Projects/Rod2D/include/: App.h  Rod2D.h  Util.h
Projects/Rod2D/src/: Rod2D.cpp  main.cpp
Projects/RodNetwork/: CMakeLists.txt
Projects/RodNetwork/autodiff/: EoLRodBendingAndTwisting.h  JoingBendingAndTwisting.cpp  JointBendingAndTwisting.h  RodBendingAndTwisting.cpp  RodBendingAndTwisting.h  RodStretchingEnergy.cpp  RodStretchingEnergy.h
Projects/RodNetwork/data/: rods.txt
Projects/RodNetwork/include/: App.h  Rod.h  RodNetwork.h  Util.h
Projects/RodNetwork/src/: App.cpp  BendingAndTwisting.cpp  DerivativeTest.cpp  Joint.cpp  Rod.cpp  RodNetwork.cpp  Stretching.cpp  Util.cpp  main.cpp
