add_subdirectory(DiscreteShell)
add_subdirectory(FEM3D)
add_subdirectory(EoLRods)
add_subdirectory(MMCCells)
add_subdirectory(Homogenization)
add_subdirectory(IsohedralTiling)
add_subdirectory(RodNetwork)
# this doesn't compile yet because of learning dependencies
# add_subdirectory(NeuralMaterialModel)